# any2md

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DEVELOPMENT.md
engine/: bootstrap.py  chunk_models.py  docx_structured.py  download_chunk_models.py  download_models.py  fast_parser.py  file_types.py  gpu_check.py  model_paths.py  ocr_parser.py  output_layout.py  pdf_structured.py  pdf_utils.py  run_chunker.py  run_parser.py
gui/: README.md  any2md.spec  build.ps1  requirements-build.txt
gui/app/: batch_worker.py  chunk_catalog.py  chunk_download_worker.py  chunk_worker.py  config.py  download_worker.py  file_types.py  gpu_probe.py  main.py  model_catalog.py  model_downloader.py  output_layout.py  parse_worker.py  paths.py  progress_estimator.py
gui/app/ui/: chunk_dialog.py  main_window.py  wizard.py
scripts/: check_env.py  generate_testset.py  make_scan_pdfs.py  run_stress_test.ps1  setup.ps1  summarize_stress_output.py
src/any2md/: __init__.py  cli.py
testset/: README.md  manifest.json
testset/expected/: checklist.md
testset/scan/: README.txt
