[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "any2md"
version = "0.1.0"
description = "Convert documents to clean Markdown via PaddleOCR-VL"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = { text = "MIT" }
dependencies = [
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "sentence-transformers>=3.0",
    "modelscope>=1.18",
]

[project.optional-dependencies]
engine = [
    "paddleocr[doc-parser]>=3.6.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
any2md = "any2md.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
